<resources>
    <string name="app_name">SDPCryptogram</string>
    <string name="title_activity_login">SDP Cryptogram</string>
    <string name="textfield_login_username">Username</string>
    <string name="button_login_login">Login</string>
    <string name="label_login_username">Username</string>
    <string name="title_activity_player_main">SDP Cryptogram</string>
    <string name="player_menu_logout">Logout</string>
    <string name="title_activity_admin_main">SDP Cryptogram</string>
    <string name="admin_menu_logout">Logout</string>
    <string name="row_admin_cleartext_filler">Default Clear Text</string>
    <string name="row_admin_ciphertext_filler">Default Cipher Text</string>
    <string name="row_admin_cryptogram_ID_filler">######</string>
    <string name="title_activity_tt">tt</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="row_admin_name_filler">Default Name</string>
    <string name="row_admin_username_filler">Default Username</string>
    <string name="row_player_cleartext_filler">Default Clear Text</string>
    <string name="row_player_attempts_label">Attempts:</string>
    <string name="row_player_attempts_filler">0</string>
    <string name="row_player_cryptogram_ID_filler">######</string>
    <string name="palyer_row_solved_label">Solved</string>
    <string name="label_Solved">Solved</string>

</resources>
