<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:paddingBottom="8dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/row_player_solved_icon"
        android:layout_width="32dp"
        android:layout_height="match_parent"
        android:paddingStart="8dp"
        android:scaleType="fitCenter"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/row_player_cleartext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="8dp"
                android:text="@string/row_player_cleartext_filler"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/row_player_solved_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="8dp"
                android:text="@string/palyer_row_solved_label"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/row_player_attempts_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:text="@string/row_player_attempts_label"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/row_player_attempts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.68"
                android:paddingStart="8dp"
                android:text="@string/row_player_attempts_filler"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/row_player_cryptogram_ID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:paddingEnd="8dp"
                android:text="@string/row_player_cryptogram_ID_filler"
                android:textAlignment="textEnd"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
