<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:paddingBottom="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.68"
        android:orientation="vertical">

        <TextView
            android:id="@+id/row_admin_cleartext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.68"
            android:paddingStart="8dp"
            android:text="@string/row_admin_cleartext_filler"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/row_admin_ciphertext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.68"
            android:paddingStart="8dp"
            android:text="@string/row_admin_ciphertext_filler"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/row_admin_cryptogram_ID"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_weight="1"
        android:paddingEnd="8dp"
        android:text="@string/row_admin_cryptogram_ID_filler"
        android:textAlignment="textEnd"
        android:textSize="12sp" />

</LinearLayout>
